# llm-app-proto

./: README.md
langchain-chat/: README.md
langchain-chat-dummy/: README.md
langchain-chat-dummy/backend/: README.md  pyproject.toml  start-server.sh
langchain-chat-dummy/backend/app/: __init__.py  main.py
langchain-chat-dummy/backend/app/core/: config.py
langchain-chat-dummy/backend/app/services/: chat_service.py
langchain-chat-dummy/frontend/: README.md  package.json
langchain-chat-dummy/frontend/src/hooks/: useChat.ts
langchain-chat/backend/: .env.example  README.md  pyproject.toml
langchain-chat/backend/app/: main.py
langchain-chat/backend/app/core/: config.py
langchain-chat/backend/app/services/: chat_service.py
langchain-chat/frontend/: README.md  package-lock.json  package.json
langchain-chat/frontend/src/: App.tsx
langchain-chat/frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx
langchain-chat/frontend/src/hooks/: useChat.ts  useChatHistory.ts
langchain-chat/frontend/src/services/: chatService.ts
langchain-chat/frontend/src/types/: chat.ts
langchain-rag-chat/: README.md
langchain-rag-chat/backend/: .gitignore  pyproject.toml
langchain-rag-chat/backend/app/: main.py
langchain-rag-chat/backend/app/core/: __init__.py
langchain-rag-chat/backend/app/services/: __init__.py  chat_service.py  rag_bot_service.py
langchain-rag-chat/backend/data/bots/: 14ef26b7-cc41-47c3-b636-873539e079fa.json
langchain-rag-chat/frontend/: package-lock.json  package.json
langchain-rag-chat/frontend/src/: App.tsx
langchain-rag-chat/frontend/src/components/: BotDetails.tsx  BotList.tsx  BotManagement.tsx  BotSelector.tsx  Chat.tsx  CreateBot.tsx  Navigation.tsx  ProcessingProgress.tsx
langchain-rag-chat/frontend/src/hooks/: useChat.ts
langchain-rag-chat/frontend/src/services/: chatService.ts  ragBotService.ts
langchain-rag-chat/frontend/src/types/: ragBot.ts
llm-chat-app/: .env.example  README.md  package-lock.json  package.json
llm-chat-app/src/: App.css  App.tsx
llm-chat-app/src/components/: ChatPanel.tsx
llm-chat-app/src/data/: lawContent.ts
llm-chat-app/src/services/: bedrockService.ts  lawDatabase.ts
voice-chat/: CLAUDE.md  README.md
voice-chat/backend/: .env.example  .gitignore  TEST_CLIENT_GUIDE.md  pyproject.toml  test_client.py
voice-chat/backend/app/: main.py
voice-chat/backend/app/core/: config.py
voice-chat/backend/app/services/: aws_services.py  chat_service.py
voice-chat/docs/: system-structure.md
voice-chat/frontend/: audio-processor.js  index.html  start-frontend.sh
