[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "chromadb>=0.4.18",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.29",
    "pypdf>=4.0.0",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.6",
]
